# hammer-and-sample

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yaml
src/: lib.rs  python_bindings.rs
tests/: coin_flip.py  coin_flip.rs  data.csv  hierarchical.py  hierarchical.rs  params.csv
