[package]
name = "hammer-and-sample"
description = "Simplistic MCMC ensemble sampler based on emcee, the MCMC hammer"
version = "0.1.4"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/hammer-and-sample"
repository = "https://github.com/adamreichold/hammer-and-sample"
keywords = ["mcmc", "ensemble", "sampler", "emcee"]
categories = ["science", "mathematics", "algorithms"]

[lib]
test = false

[dependencies]
rand = { version = "0.8", default-features = false }
rayon = { version = "1.5", optional = true }

[dev-dependencies]
rand_distr = "0.4"
rand_pcg = "0.3"

[package.metadata.docs.rs]
all-features = true
